--- a/Vertex-gtk/gtk-3.0/gtk-contained-dark.css
+++ b/Vertex-gtk/gtk-3.0/gtk-contained-dark.css
@@ -1733,7 +1733,8 @@ column-header .button, column-header .button:hover, column-header .button:active
       border-style: solid;
       border-color: transparent; }
     .scrollbar.overlay-indicator:not(.dragging):not(.hovering) .trough {
-      border: none; }
+      border: none;
+      background: none; }
   .scrollbar.trough {
     border-image: -gtk-scaled(url("assets/scrollbar-trough-dark.png"), url("assets/scrollbar-trough-dark@2.png")) 8 7 8 8/8px 7px 8px 8px stretch;
     border-radius: 0;
@@ -2279,16 +2280,6 @@ GtkFileChooserDialog .dialog-action-box {
   color: rgba(243, 243, 245, 0.8);
   icon-shadow: 0 -1px rgba(0, 0, 0, 0.7);
   text-shadow: 0 -1px rgba(0, 0, 0, 0.7); }
-  .sidebar .scrollbars-junction,
-  .sidebar .scrollbars-junction.frame,
-  .sidebar .scrollbar.trough, .sidebar .view .scrollbars-junction,
-  .sidebar .view .scrollbars-junction.frame,
-  .sidebar .view .scrollbar.trough {
-    box-shadow: none;
-    border-image: none;
-    border-color: transparent;
-    background-color: #353638;
-    background-image: none; }
 
 .sidebar-item {
   padding: 10px 4px; }
